[package]
name = "Dawn_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.7", features = ["json", "rustls-tls", "native-tls", "rustls-tls-native-roots", "rustls-tls-webpki-roots"] }
serde_json = { version = "1.0.128"}
tokio = { version = "1.40.0", features = ["full"] }
ddddocr = { git = "https://github.com/86maid/ddddocr.git", branch = "master", features = ["cuda"] }
base64 = "0.22.1"
image = "0.25.2"
chrono = "0.4.38"
retry = "2.0.0"
serde = { version = "1.0.210", features = ["derive"] }
imap = "2.4.1"
native-tls = "0.2.12"
mailparse = "0.15.0"
regex = "1.10.6"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
encoding_rs = "0.8.34"
scraper = "0.20.0"
serde_yaml = "0.9.34"
thiserror = "1.0.63"
redis = {version ="0.27.0", features = ["tokio-comp"]}
